package acme.entities;

public enum MilestoneKind {
	
	TEASER, ENGAGING, CONVERSION
	
}
