package acme.entities.campaigns;


import java.time.temporal.ChronoUnit;
import java.util.Date;

import javax.persistence.Column;
import javax.persistence.Entity;
import javax.persistence.ManyToOne;
import javax.persistence.Temporal;
import javax.persistence.TemporalType;
import javax.persistence.Transient;
import javax.validation.Valid;

import org.springframework.beans.factory.annotation.Autowired;

import acme.client.components.basis.AbstractEntity;
import acme.client.components.validation.Mandatory;
import acme.client.components.validation.Optional;
import acme.client.components.validation.ValidMoment;
import acme.client.components.validation.ValidNumber;
import acme.client.components.validation.ValidUrl;
import acme.client.helpers.MathHelper;
import acme.client.helpers.MomentHelper;
import acme.constraints.ValidCampaign;
import acme.constraints.ValidHeader;
import acme.constraints.ValidText;
import acme.constraints.ValidTicker;
import acme.features.spokesperson.campaign.CampaignRepository;
import acme.realms.Spokesperson;
import lombok.Getter;
import lombok.Setter;

@Entity
@Getter
@Setter
@ValidCampaign
public class Campaign extends AbstractEntity {
	
	private static final long		serialVersionUID	= 1L;


	@Mandatory
	@ValidTicker
	@Column(unique = true)
	private String ticker;

	@Mandatory
	@ValidHeader
	@Column
	private String name;

	@Mandatory
	@ValidText
	@Column
	private String description;

	@Mandatory
	@ValidMoment
	@Temporal(value = TemporalType.TIMESTAMP)
	private Date startMoment;

	@Mandatory
	@ValidMoment
	@Temporal(value = TemporalType.TIMESTAMP)
	private Date endMoment;

	@Optional
	@ValidUrl
	@Column
	private String moreInfo;

	@Mandatory
	@Valid
	@Column
	private Boolean draftMode;

	@Mandatory
	@Valid
	@ManyToOne(optional = false)
	private Spokesperson spokesperson;



	@Transient
	@Autowired
	private CampaignRepository repository;

	
	@Mandatory
	@ValidNumber(min = 0.0)
	@Transient
	public Double getMonthsActive() {
		if (this.startMoment == null || this.endMoment == null || !MomentHelper.isAfter(this.endMoment, this.startMoment))
			return 0.0;

		final double months = MomentHelper.computeDifference(this.startMoment, this.endMoment, ChronoUnit.MONTHS);

		return MathHelper.roundOff(months, 1);
	}


	
	@Mandatory
	@ValidNumber(min = 0.0)
	@Transient
	public Double getEffort() {
		if (this.repository == null || this.getId() == 0)
			return 0.0;

		Double wrapper = this.repository.computeCampaignEffort(this.getId());
		
		return wrapper == null ? 0.0 : wrapper.doubleValue();
	}
}
